# CRONOS

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
flightsim/: __init__.py  simulation.py
propulsion/: __init__.py  propsys.py
rocketdesign/: __init__.py  component.py  rocket.py
tests/: __init__.py  propsys_test_1.py  rocket_test_1.py  sim_test_1.py  test_rocket.yaml
